Fix z-index of proxy detail tooltip

--- a/src/php/resources/css/default.css
+++ b/src/php/resources/css/default.css
@@ -108,7 +108,7 @@ label {
 			padding: 10px 12px;
 			text-align: left;
 			width: 358px;
-			z-index: 9;
+			z-index: 1;
 		}
 			.table tr td .details:after {
 				border-color: transparent transparent #181b23;
